commplate card sectiont

--- a/index.html
+++ b/index.html
@@ -79,14 +79,77 @@
           <h3>
             We are gamer
           </h3>
-          <p>An international digital games and entertainment company.We develop, publish and distribute multiplayer
+          <p class="common-text">An international digital games and entertainment company.We develop, publish and
+            distribute multiplayer
             mobile games. We reach over 400 million players each month and our audience keeps growing. </p>
           <button class="common-btn">KNOW MORE</button>
           <p class="purpose">Our purpose...<br> <span>"unleash the gamer in everyone"</span></p>
         </div>
       </div>
     </section>
-
+    <!-- the card section -->
+    <section>
+      <div class="card-content">
+        <h3>Online Games <span>Funny Videos</span></h3>
+        <p>A Collection of Hilarious Videos to Brighten You Day</p>
+      </div>
+      <div class="card">
+        <div>
+          <div class="play-card one">
+            <div class="hover card-1">
+              <img src="/images/play-button 1.svg" alt="">
+              <p>Watch NOw</p>
+            </div>
+          </div>
+          <p>No Download.No Installs.Play games Instantly on Gamer</p>
+        </div>
+        <div>
+          <div class="play-card two">
+            <div class="hover card-2">
+              <img src="/images/play-button 1.svg" alt="">
+              <p>Watch Now</p>
+            </div>
+          </div>
+          <p>Did you score? #unblocked games #school</p>
+        </div>
+        <div>
+          <div class="play-card three">
+            <div class="hover card-3">
+              <img src="/images/play-button 1.svg" alt="">
+              <p>Watch Now</p>
+            </div>
+          </div>
+          <p>Breaking game records like OG</p>
+        </div>
+        <div>
+          <div class="play-card four">
+            <div class="hover card-4">
+              <img src="/images/play-button 1.svg" alt="">
+              <p>Watch Now</p>
+            </div>
+          </div>
+          <p>Busted gaming school laptop, but you are still it.</p>
+        </div>
+      </div>
+    </section>
+    <!-- play section -->
+    <section>
+      <div class="play">
+        <div class="play-content">
+          <h2>
+            Play Instantly,<br>No Downloads<br>
+            No Installs.
+          </h2>
+          <p class="common-text">
+            Play games online for free without<br> downloading.Just click the play button <br> and play instantly in
+            your
+            browser.
+          </p>
+        </div>
+        <div class="play-img"><img src="/images/Rectangle 55.png" alt=""></div>
+        <img src="/images/Rectangle 66.png" alt="">
+      </div>
+    </section>
     </main>
     <footer>
 
