--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="play">
         <div class="play-content">
           <h2>
-            Play Instantly,<br>No Downloads<br>
+            <span>Play Instantly,</span><br>No Downloads<br>
             No Installs.
           </h2>
           <p class="common-text">
@@ -146,8 +146,13 @@
             browser.
           </p>
         </div>
-        <div class="play-img"><img src="/images/Rectangle 55.png" alt=""></div>
-        <img src="/images/Rectangle 66.png" alt="">
+        <div>
+          <img class="play-img" src="/images/Rectangle 55.png" alt="">
+          <div>
+            <img class="tomy" src="/images/Rectangle 66.png" alt="">
+          </div>
+        </div>
+
       </div>
     </section>
     </main>
