--- a/index.html
+++ b/index.html
@@ -152,13 +152,41 @@
             <img class="tomy" src="/images/Rectangle 66.png" alt="">
           </div>
         </div>
-
       </div>
     </section>
     </main>
-    <footer>
 
-    </footer>
+    <!-- The careers section -->
+    <section>
+      <div class="career">
+        <div class="career-content">
+          <h2>Careers</h2>
+          <p class="career-text">Gamer is driven to create the best and most fun games for our millions of players all
+            around the world,and we are always on the lookout for more top talent to our growing team. if you would
+            like to help us make great games and be a part of Gamers bring future. We would to hear form you. </p>
+          <div class="art-name">
+            <ul>
+              <li>multimedia Artist+</li>
+              <li>Data Engineer+</li>
+              <li>Android Engineer+</li>
+              <li>Server Developer+</li>
+              <li>Group financial Accountant+</li>
+              <li>Senior User Acuisition Specialist+</li>
+            </ul>
+            <ul class="last">
+              <li>Lisbon, Portugal</li>
+              <li>Lisbon, Portugal</li>
+              <li>Zoetermeer, Netherlands</li>
+              <li>Lisbon, Portugal</li>
+              <li>London, United Kingdom</li>
+              <li>Lisbon, Portugal</li>
+            </ul>
+          </div>
+        </div>
+        <img src="images/Group 65.png" alt="">
+      </div>
+    </section>
+    <footer></footer>
 </body>
 
 </html>
