--- a/index.html
+++ b/index.html
@@ -186,7 +186,49 @@
         <img src="images/Group 65.png" alt="">
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <div class="skill">
+        <div class="common-skill">
+          <img src="/images/Rectangle 11.png" alt="">
+          <p>Action Game</p>
+        </div>
+        <div class="common-skill">
+          <img src="/images/Rectangle 12.png" alt="">
+          <p>
+            Adventure Game
+          </p>
+        </div>
+        <div class="common-skill">
+          <img src="/images/Rectangle 13.png" alt="">
+          <p>Arcade Game</p>
+        </div>
+        <div class="common-skill">
+          <img src="/images/Rectangle 14.png " alt="">
+          <p>world Game</p>
+        </div>
+        <div class="common-skill">
+          <img src="/images/Rectangle 15.png" alt="">
+          <p>Role Playing Game </p>
+        </div>
+        <div class="common-skill skill-2">
+          <img src="/images/Rectangle 16.png" alt="">
+          <p>Music & Audio Game</p>
+        </div>
+        <div class="common-skill skill-2">
+          <img src="/images/Rectangle 17.png" alt="">
+          <p>Puzzle Game</p>
+        </div>
+        <div class="common-skill skill-2">
+          <img src="/images/Rectangle 18.png" alt="">
+          <p>Strategy Game</p>
+        </div>
+        <div class="common-skill skill-2">
+          <img src="/images/Rectangle 19.png" alt="">
+          <p>Educational Game</p>
+        </div>
+      </div>
+      <!-- The last footer section -->
+    </footer>
 </body>
 
 </html>
