--- a/index.html
+++ b/index.html
@@ -228,6 +228,29 @@
         </div>
       </div>
       <!-- The last footer section -->
+      <div class="footer">
+        <div class="nav-left">
+          <img class="game" src="/images/Frame.png" alt="Game">
+          <h3><span>G</span>ame</h3>
+        </div>
+        <ul class="gamer-support">
+          <li>Our Story</li>
+          <li>Games</li>
+          <li>Web Games</li>
+        </ul>
+        <ul class="footer-link">
+          <img src="/images/twitter 1.png" alt=""><img src="/images/facebook 1.png" alt=""><img src="/images/Vector.png"
+            alt="">
+        </ul>
+        <ul class="footer-ul">
+          <li>Trams and Condition</li>
+          <li>Privacy Policy</li>
+          <li>Cookie Policy</li>
+          <li>Privacy Settings</li>
+        </ul>
+        <p class="footer-text">Play Games @ Gamer<br>
+          @ 2000-2023 Gamer Bangladesh</p>
+      </div>
     </footer>
 </body>
 
