--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="/images/favicon.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
   <title>GamePark</title>
 </head>
 
@@ -16,7 +16,7 @@
     <nav>
       <div class="nav-container">
         <div class="nav-left">
-          <img class="game" src="/images/Frame.png" alt="Game">
+          <img class="game" src="Frame.png" alt="Game">
           <h3><span>G</span>ame</h3>
         </div>
         <div class="nav-center">
@@ -25,8 +25,8 @@
 
           <div class="nav-right">
             <p>Follow Us On</p>
-            <img class="youtube" src="/images/Vector.png" alt="Youtube">
-            <img class="tik-tok" src="/images/tik-tok 1.png" alt="tik-tok">
+            <img class="youtube" src="Vector.png" alt="Youtube">
+            <img class="tik-tok" src="tik-tok 1.png" alt="tik-tok">
           </div>
         </div>
       </div>
@@ -43,15 +43,15 @@
               G.O.A.T
             </h2>
             <div class="banner-support">
-              <img src="/images/play.png" alt="">
+              <img src="play.png" alt="">
               <p>1-click instant play</p>
             </div>
             <div class="banner-support">
-              <img src="/images/download.png" alt="">
+              <img src="download.png" alt="">
               <p>No Download</p>
             </div>
             <div class="banner-support">
-              <img src="/images/contact.png" alt="">
+              <img src="contact.png" alt="">
               <p>1000s of supported online games</p>
             </div>
             <div>
@@ -61,10 +61,10 @@
           </div>
         </div>
         <div>
-          <img class="banner-img" src="/images/pngwing 1.png" alt="">
+          <img class="banner-img" src="pngwing 1.png" alt="">
           <div class="buttom-img">
-            <img class="tree-img" src="/images/pngwing 2.png" alt="">
-            <img class="fight-img" src="/images/pngwing 3.png" alt="">
+            <img class="tree-img" src="pngwing 2.png" alt="">
+            <img class="fight-img" src="pngwing 3.png" alt="">
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
     <section>
       <div class="gamer">
         <div>
-          <img class="gamer-img" src="/images/pngwing 4.png" alt="">
+          <img class="gamer-img" src="pngwing 4.png" alt="">
         </div>
         <div class="gamer-content">
           <h3>
@@ -97,7 +97,7 @@
         <div>
           <div class="play-card one">
             <div class="hover card-1">
-              <img src="/images/play-button 1.svg" alt="">
+              <img src="play-button 1.svg" alt="">
               <p>Watch NOw</p>
             </div>
           </div>
@@ -106,7 +106,7 @@
         <div>
           <div class="play-card two">
             <div class="hover card-2">
-              <img src="/images/play-button 1.svg" alt="">
+              <img src="play-button 1.svg" alt="">
               <p>Watch Now</p>
             </div>
           </div>
@@ -115,7 +115,7 @@
         <div>
           <div class="play-card three">
             <div class="hover card-3">
-              <img src="/images/play-button 1.svg" alt="">
+              <img src="play-button 1.svg" alt="">
               <p>Watch Now</p>
             </div>
           </div>
@@ -124,7 +124,7 @@
         <div>
           <div class="play-card four">
             <div class="hover card-4">
-              <img src="/images/play-button 1.svg" alt="">
+              <img src="play-button 1.svg" alt="">
               <p>Watch Now</p>
             </div>
           </div>
@@ -147,9 +147,9 @@
           </p>
         </div>
         <div>
-          <img class="play-img" src="/images/Rectangle 55.png" alt="">
+          <img class="play-img" src="Rectangle 55.png" alt="">
           <div>
-            <img class="tomy" src="/images/Rectangle 66.png" alt="">
+            <img class="tomy" src="Rectangle 66.png" alt="">
           </div>
         </div>
       </div>
@@ -183,54 +183,54 @@
             </ul>
           </div>
         </div>
-        <img src="images/Group 65.png" alt="">
+        <img src="Group 65.png" alt="">
       </div>
     </section>
     <footer>
       <div class="skill">
         <div class="common-skill">
-          <img src="/images/Rectangle 11.png" alt="">
+          <img src="Rectangle 11.png" alt="">
           <p>Action Game</p>
         </div>
         <div class="common-skill">
-          <img src="/images/Rectangle 12.png" alt="">
+          <img src="Rectangle 12.png" alt="">
           <p>
             Adventure Game
           </p>
         </div>
         <div class="common-skill">
-          <img src="/images/Rectangle 13.png" alt="">
+          <img src="Rectangle 13.png" alt="">
           <p>Arcade Game</p>
         </div>
         <div class="common-skill">
-          <img src="/images/Rectangle 14.png " alt="">
+          <img src="Rectangle 14.png " alt="">
           <p>world Game</p>
         </div>
         <div class="common-skill">
-          <img src="/images/Rectangle 15.png" alt="">
+          <img src="Rectangle 15.png" alt="">
           <p>Role Playing Game </p>
         </div>
         <div class="common-skill skill-2">
-          <img src="/images/Rectangle 16.png" alt="">
+          <img src="Rectangle 16.png" alt="">
           <p>Music & Audio Game</p>
         </div>
         <div class="common-skill skill-2">
-          <img src="/images/Rectangle 17.png" alt="">
+          <img src="Rectangle 17.png" alt="">
           <p>Puzzle Game</p>
         </div>
         <div class="common-skill skill-2">
-          <img src="/images/Rectangle 18.png" alt="">
+          <img src="Rectangle 18.png" alt="">
           <p>Strategy Game</p>
         </div>
         <div class="common-skill skill-2">
-          <img src="/images/Rectangle 19.png" alt="">
+          <img src="Rectangle 19.png" alt="">
           <p>Educational Game</p>
         </div>
       </div>
       <!-- The last footer section -->
       <div class="footer">
         <div class="nav-left">
-          <img class="game" src="/images/Frame.png" alt="Game">
+          <img class="game" src="Frame.png" alt="Game">
           <h3><span>G</span>ame</h3>
         </div>
         <ul class="gamer-support">
@@ -239,8 +239,9 @@
           <li>Web Games</li>
         </ul>
         <ul class="footer-link">
-          <img src="/images/twitter 1.png" alt=""><img src="/images/facebook 1.png" alt=""><img src="/images/Vector.png"
-            alt="">
+          <img src="twitter 1.png" alt="">
+          <img src="facebook 1.png" alt="">
+          <img src="Vector.png" alt="">
         </ul>
         <ul class="footer-ul">
           <li>Trams and Condition</li>
